include services link

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -21,7 +21,7 @@
   <body>
     <header id="top">
       <nav>
-        <a>Services</a>
+        <a href="services.html">Services</a>
         <a>Product</a>
         <a>Vision</a>
         <a>Features</a>
