--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -4,14 +4,15 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Great Idea!</title>
+    <title>Great Idea! - Services</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="css/services.css" />
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -19,10 +20,25 @@
   </head>
 
   <body>
-    Services Product Vision Features About Contact
-
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
-
+    <header id="top">
+      <nav>
+        <a href="services.html">Services</a>
+        <a>Product</a>
+        <a>Vision</a>
+        <a>Features</a>
+        <a>About</a>
+        <a>Contact</a>
+      </nav>
+      <div>
+        <a href="index.html">
+          <img
+            class="logo"
+            src="img/logo.png"
+            alt="Great Idea! Company logo."
+          />
+        </a>
+      </div>
+    </header>
     <img
       class="services-header-img"
       src="img/services-header.jpg"
