--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -23,11 +23,11 @@
     <header id="top">
       <nav>
         <a href="services.html">Services</a>
-        <a>Product</a>
-        <a>Vision</a>
-        <a>Features</a>
-        <a>About</a>
-        <a>Contact</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
       </nav>
       <div>
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
