--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -30,7 +30,13 @@
         <a href="#">Contact</a>
       </nav>
       <div>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+        <a href="index.html">
+          <img
+            class="logo"
+            src="img/logo.png"
+            alt="Great Idea! Company logo."
+          />
+        </a>
       </div>
     </header>
     <main>
@@ -111,7 +117,7 @@
         </address>
         <p class="phone-number">(888) 888-8888</p>
         <p>sales@greatidea.io</p>
-        <small>Copyright Great Idea 2018</small>
+        <small>Copyright Great Idea! 2020</small>
       </footer>
     </main>
   </body>
