--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -3,11 +3,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Great Idea! - Services</title>
 
     <link
-      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      href="https://fonts.googleapis.com/css?family=Bangers|Roboto&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/reset.css" />
@@ -23,11 +23,11 @@
     <header id="top">
       <nav>
         <a href="services.html">Services</a>
-        <a>Product</a>
-        <a>Vision</a>
-        <a>Features</a>
-        <a>About</a>
-        <a>Contact</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
       </nav>
       <div>
         <a href="index.html">
@@ -39,55 +39,123 @@
         </a>
       </div>
     </header>
-    <img
-      class="services-header-img"
-      src="img/services-header.jpg"
-      alt="Our services header image"
-    />
+    <main>
+      <section>
+        <img
+          class="services-header-img"
+          src="img/services-header.jpg"
+          alt="Our services header image"
+        />
 
-    Services Our services provide the best digital value in nulla suscipit
-    interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
-    iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur
-    cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-    pellentesque eleifend. Mauris euismod facilisis iaculis. Digital Design
-    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan
-    nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis
-    aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
-    sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
-    Learn More UX / UI Nulla suscipit interdum diam at maximus. Proin vitae
-    tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur
-    feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-    finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
-    facilisis iaculis. Learn More Digital Marketing Nulla suscipit interdum diam
-    at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis
-    tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et
-    justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis. Learn More Web Development Nulla
-    suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc
-    sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet.
-    Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-    faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis. Learn
-    More iOS Development Nulla suscipit interdum diam at maximus. Proin vitae
-    tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur
-    feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-    finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
-    facilisis iaculis. Learn More Android Development Nulla suscipit interdum
-    diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis
-    tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et
-    justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis. Learn More Some Facts About Our
-    Services Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-    accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo
-    quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-    neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis
-    iaculis. Awesome thing Amazing thing Cool thing Great thing
+        <article>
+          <h2>Services</h2>
+          Our services provide the best digital value in nulla suscipit interdum
+          diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
+          iaculis tortor. Mauris consectetur feugiat justo quis aliquet.
+          Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+        </article>
+      </section>
+      <section>
+        <article>
+          <h3>Digital Design</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </article>
+        <article>
+          <h3>UX / UI</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </article>
+        <article>
+          <h3>Digital Marketing</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </article>
+        <article>
+          <h3>Web Development</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </article>
+        <article>
+          <h3>iOS Development</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </article>
+        <article>
+          <h3>Android Development</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </article>
+      </section>
+      <section>
+        <h3>Some Facts About Our Services</h3>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <ul>
+          <li>Awesome thing</li>
+          <li>Amazing thing</li>
+          <li>Cool thing</li>
+          <li>Great thing</li>
+        </ul>
+        <img
+          class="services-info-img"
+          src="img/services-info.png"
+          alt="one of our employees hard at work"
+        />
+      </section>
 
-    <img
-      class="services-info-img"
-      src="img/services-info.png"
-      alt="one of our employees hard at work"
-    />
-
-    Copyright Great Idea! 2018
+      <footer>
+        <h2>Contact</h2>
+        <address>
+          <p>123 Way 456 Street</p>
+          <p>Somewhere, USA</p>
+        </address>
+        <p class="phone-number">(888) 888-8888</p>
+        <p>sales@greatidea.io</p>
+        <small>Copyright Great Idea! 2020</small>
+      </footer>
+    </main>
   </body>
 </html>
