--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -29,15 +29,10 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
-      <div>
-        <a href="index.html">
-          <img
-            class="logo"
-            src="img/logo.png"
-            alt="Great Idea! Company logo."
-          />
-        </a>
-      </div>
+
+      <a href="index.html">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+      </a>
     </header>
     <main>
       <section>
