services page basic layout

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -35,7 +35,7 @@
       </a>
     </header>
     <main>
-      <section>
+      <summary>
         <img
           class="services-header-img"
           src="img/services-header.jpg"
@@ -44,14 +44,18 @@
 
         <article>
           <h2>Services</h2>
-          Our services provide the best digital value in nulla suscipit interdum
-          diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
-          iaculis tortor. Mauris consectetur feugiat justo quis aliquet.
-          Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-          faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+          <p>
+            Our services provide the best digital value in nulla suscipit
+            interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc
+            sit amet, iaculis tortor. Mauris consectetur feugiat justo quis
+            aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+            neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
+            facilisis iaculis.
+          </p>
         </article>
-      </section>
-      <section>
+      </summary>
+      <hr />
+      <section class="services">
         <article>
           <h3>Digital Design</h3>
           <p>
@@ -119,21 +123,24 @@
           <button>Learn More</button>
         </article>
       </section>
-      <section>
-        <h3>Some Facts About Our Services</h3>
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-          euismod facilisis iaculis.
-        </p>
-        <ul>
-          <li>Awesome thing</li>
-          <li>Amazing thing</li>
-          <li>Cool thing</li>
-          <li>Great thing</li>
-        </ul>
+      <hr />
+      <section class="facts">
+        <div>
+          <h3>Some Facts About Our Services</h3>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <ul>
+            <li>Awesome thing</li>
+            <li>Amazing thing</li>
+            <li>Cool thing</li>
+            <li>Great thing</li>
+          </ul>
+        </div>
         <img
           class="services-info-img"
           src="img/services-info.png"
