--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -141,11 +141,13 @@
             <li>Great thing</li>
           </ul>
         </div>
-        <img
-          class="services-info-img"
-          src="img/services-info.png"
-          alt="one of our employees hard at work"
-        />
+        <div class="image-wrapper">
+          <img
+            class="services-info-img"
+            src="img/services-info.png"
+            alt="one of our employees hard at work"
+          />
+        </div>
       </section>
 
       <footer>
